# siri3us.github.io

./: _config.yml  blog.html  contacts.md  test.md
_layouts/: post.html
_posts/: 2018-11-06-Initializer-list.md  2018-11-06-apples.md  2018-11-06-bananas.md  2018-11-06-kiwifruit.md  2018-11-06-welcome-to-jekyll.md  2018-11-07-aggregates.md  2018-11-16-best-practices.md  2019-01-02.md  2019-01-03-metaprogramming.md  2019-05-07-GIL.md  2019-05-07-assembler.md  2019-05-07-cpp-static.md  2019-05-07-default-rules.md  2019-05-07-linking.md  2019-05-07-noexcept.md  2019-05-07-rvalue-lvalue.md  2019-05-07-type-conversion.md  2019-05-08-gdb.md  2019-05-15-boost-program-options.md  2019-05-17-CTTD.md  2019-05-17-cpp-atomics.md  2019-05-17-cpp-constexpr.md  2019-05-17-cpp-parallel.md  2019-05-17-cpp-performance.md  2019-06-01-std-string.md  2019-06-01-vim_01_ken.md  cppcon2017.md
code/: 01_move_noexcept.cpp  02_move_and_rvo.cpp  03_move_auto_cref.cpp  04_lifetime.cpp  life_after_scope.cpp  rvo.cpp  static_log2.cpp  unique.cpp
code/2018_11_07_initialization/: 01_initialization.cpp
code/2018_11_08_casting/: 01_layout.cpp  01_question_change_const.cpp  01_static_cast.cpp  02_layout_virtual.cpp  03_layout_break_hard.cpp  tools.h
code/2019_05_07_default_rules/: 01_five_functions.cpp  02_rule_of_five.cpp  03_default.cpp  print_traits.h
code/2019_05_07_noexcept/: 01_main.cpp  integer_value.cpp  integer_value.h  integer_value_02.cpp  integer_value_03.cpp  integer_value_04.cpp  main_02.cpp  terminate.cpp  (+1 more)
code/boost/: CMakeLists.txt
code/boost/01_intro/: 01_intro.cpp
(+97 files in other folders)
